--- a/Application/To-Do/View/Base.lproj/Main.storyboard
+++ b/Application/To-Do/View/Base.lproj/Main.storyboard
@@ -142,35 +142,36 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7z6-n2-D9u">
-                                            <rect key="frame" x="16" y="16" width="250.5" height="20.5"/>
+                                            <rect key="frame" x="16" y="16" width="263" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xv4-yP-SAo">
-                                            <rect key="frame" x="16" y="36.5" width="250.5" height="14.5"/>
+                                            <rect key="frame" x="16" y="36.5" width="263" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vJ3-Nd-odk">
-                                            <rect key="frame" x="282.5" y="19.5" width="38" height="36"/>
-                                            <color key="tintColor" red="0.98039215686274506" green="0.58431372549019611" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vJ3-Nd-odk">
+                                            <rect key="frame" x="295" y="22.5" width="32" height="30"/>
+                                            <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
+                                                <constraint firstAttribute="width" constant="32" id="0u5-Ps-05R"/>
                                                 <constraint firstAttribute="width" secondItem="vJ3-Nd-odk" secondAttribute="height" multiplier="1:1" id="bfe-HE-qwm"/>
                                             </constraints>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vt6-Tu-Oxt">
-                                            <rect key="frame" x="328.5" y="18.5" width="38.5" height="38"/>
+                                            <rect key="frame" x="335" y="21.5" width="32" height="32"/>
                                             <color key="tintColor" red="1" green="0.88523057959999996" blue="0.25277458479999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="Vt6-Tu-Oxt" secondAttribute="height" multiplier="1:1" id="G5r-lO-49l"/>
+                                                <constraint firstAttribute="width" constant="32" id="j4s-J7-0oU"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="7z6-n2-D9u" firstAttribute="top" secondItem="Xi5-Cn-PMQ" secondAttribute="top" constant="16" id="3cV-Mc-8cI"/>
-                                        <constraint firstItem="Vt6-Tu-Oxt" firstAttribute="width" secondItem="Xi5-Cn-PMQ" secondAttribute="width" multiplier="0.1" id="5qk-u5-2fE"/>
                                         <constraint firstItem="xv4-yP-SAo" firstAttribute="leading" secondItem="7z6-n2-D9u" secondAttribute="leading" id="Gz0-Mc-DtD"/>
                                         <constraint firstItem="xv4-yP-SAo" firstAttribute="trailing" secondItem="7z6-n2-D9u" secondAttribute="trailing" id="IGo-Q6-dt2"/>
                                         <constraint firstItem="xv4-yP-SAo" firstAttribute="top" secondItem="7z6-n2-D9u" secondAttribute="bottom" id="IYN-fY-3dS"/>
@@ -178,7 +179,6 @@
                                         <constraint firstAttribute="trailing" secondItem="Vt6-Tu-Oxt" secondAttribute="trailing" constant="16" id="P2R-1d-cGW"/>
                                         <constraint firstItem="7z6-n2-D9u" firstAttribute="trailing" secondItem="vJ3-Nd-odk" secondAttribute="leading" constant="-16" id="PQP-XJ-Yai"/>
                                         <constraint firstItem="vJ3-Nd-odk" firstAttribute="centerY" secondItem="Xi5-Cn-PMQ" secondAttribute="centerY" id="fHY-RT-sIi"/>
-                                        <constraint firstItem="vJ3-Nd-odk" firstAttribute="width" secondItem="Xi5-Cn-PMQ" secondAttribute="width" multiplier="0.1" id="fUF-v3-hVb"/>
                                         <constraint firstItem="7z6-n2-D9u" firstAttribute="leading" secondItem="Xi5-Cn-PMQ" secondAttribute="leading" constant="16" id="kcN-sN-158"/>
                                         <constraint firstItem="vJ3-Nd-odk" firstAttribute="trailing" secondItem="Vt6-Tu-Oxt" secondAttribute="leading" constant="-8" id="pMs-jg-BDN"/>
                                         <constraint firstItem="Vt6-Tu-Oxt" firstAttribute="centerY" secondItem="Xi5-Cn-PMQ" secondAttribute="centerY" id="wpi-Vp-Jz6"/>
@@ -187,6 +187,7 @@
                                 <connections>
                                     <outlet property="priorityImage" destination="vJ3-Nd-odk" id="Tjw-iq-xpI"/>
                                     <outlet property="starImage" destination="Vt6-Tu-Oxt" id="t5o-k1-Fhm"/>
+                                    <outlet property="starImageWidthConstraint" destination="j4s-J7-0oU" id="EmE-Tz-cL4"/>
                                     <outlet property="subtitle" destination="xv4-yP-SAo" id="UGS-gq-Mvs"/>
                                     <outlet property="title" destination="7z6-n2-D9u" id="gdZ-eW-1d8"/>
                                 </connections>
