Enable/disable filter option feature added

--- a/Application/To-Do/View/Base.lproj/Main.storyboard
+++ b/Application/To-Do/View/Base.lproj/Main.storyboard
@@ -384,6 +384,9 @@
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="sortButton" destination="b7u-lX-2Lr" id="iTi-st-z5G"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SJc-qK-IwC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
