--- a/Application/To-Do/View/Base.lproj/Main.storyboard
+++ b/Application/To-Do/View/Base.lproj/Main.storyboard
@@ -424,6 +424,44 @@
                                                     <constraint firstItem="odz-9X-63U" firstAttribute="top" secondItem="3TG-cX-Xtw" secondAttribute="top" id="zka-9F-npH"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H25-Aj-SI2">
+                                                <rect key="frame" x="16" y="362.5" width="382" height="58.5"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="timer" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Xez-SX-9w2">
+                                                        <rect key="frame" x="0.0" y="1" width="60" height="59"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="60" id="Qkn-N0-Sr7"/>
+                                                            <constraint firstAttribute="height" constant="60" id="dXA-t5-eb3"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task History" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wb0-kW-e6i">
+                                                        <rect key="frame" x="76" y="0.0" width="99" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUt-3Y-bv9">
+                                                        <rect key="frame" x="76" y="22.5" width="306" height="36"/>
+                                                        <string key="text">Watch every task history.
+</string>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="Wb0-kW-e6i" firstAttribute="top" secondItem="H25-Aj-SI2" secondAttribute="top" id="0WT-Ej-9JQ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="hUt-3Y-bv9" secondAttribute="bottom" id="A2b-Jp-P7i"/>
+                                                    <constraint firstAttribute="trailing" secondItem="hUt-3Y-bv9" secondAttribute="trailing" id="LRx-Ds-TvJ"/>
+                                                    <constraint firstItem="Xez-SX-9w2" firstAttribute="top" secondItem="H25-Aj-SI2" secondAttribute="top" id="PH9-dE-KwE"/>
+                                                    <constraint firstItem="hUt-3Y-bv9" firstAttribute="top" secondItem="Wb0-kW-e6i" secondAttribute="bottom" constant="2" id="WQz-LN-aQv"/>
+                                                    <constraint firstItem="hUt-3Y-bv9" firstAttribute="leading" secondItem="Wb0-kW-e6i" secondAttribute="leading" id="Yhj-4j-HVU"/>
+                                                    <constraint firstItem="Xez-SX-9w2" firstAttribute="leading" secondItem="H25-Aj-SI2" secondAttribute="leading" id="Yky-7u-3lq"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wb0-kW-e6i" secondAttribute="trailing" constant="20" symbolic="YES" id="aQY-jv-511"/>
+                                                    <constraint firstItem="Wb0-kW-e6i" firstAttribute="leading" secondItem="Xez-SX-9w2" secondAttribute="trailing" constant="16" id="hL8-wl-wJ2"/>
+                                                </constraints>
+                                            </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uHe-DW-zV4">
                                                 <rect key="frame" x="16" y="738" width="382" height="48"/>
                                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
@@ -442,17 +480,19 @@
                                         <constraints>
                                             <constraint firstItem="3TG-cX-Xtw" firstAttribute="top" secondItem="GpJ-tY-hTi" secondAttribute="bottom" constant="32" id="4e9-D3-hxc"/>
                                             <constraint firstItem="uHe-DW-zV4" firstAttribute="trailing" secondItem="3TG-cX-Xtw" secondAttribute="trailing" id="6qR-pN-pnf"/>
+                                            <constraint firstItem="H25-Aj-SI2" firstAttribute="top" secondItem="3TG-cX-Xtw" secondAttribute="bottom" constant="16" id="77Z-qJ-5Mt"/>
                                             <constraint firstAttribute="trailing" secondItem="3TG-cX-Xtw" secondAttribute="trailing" constant="16" id="8gJ-mG-TZZ"/>
                                             <constraint firstItem="UJY-1L-u31" firstAttribute="top" secondItem="0s7-Ur-UNt" secondAttribute="bottom" constant="32" id="9Ag-pD-esg"/>
+                                            <constraint firstAttribute="trailing" secondItem="H25-Aj-SI2" secondAttribute="trailing" constant="16" id="A5q-Cb-b7X"/>
                                             <constraint firstAttribute="trailing" secondItem="UJY-1L-u31" secondAttribute="trailing" constant="16" id="AJj-QZ-RWW"/>
                                             <constraint firstAttribute="bottom" secondItem="uHe-DW-zV4" secondAttribute="bottom" constant="32" id="AcE-Hk-vEX"/>
                                             <constraint firstItem="GpJ-tY-hTi" firstAttribute="leading" secondItem="4s5-WT-Afv" secondAttribute="leading" constant="16" id="Qdz-8p-AxA"/>
+                                            <constraint firstItem="H25-Aj-SI2" firstAttribute="leading" secondItem="4s5-WT-Afv" secondAttribute="leading" constant="16" id="S8q-ZH-hkO"/>
                                             <constraint firstAttribute="trailing" secondItem="GpJ-tY-hTi" secondAttribute="trailing" constant="16" id="W13-VI-Grb"/>
                                             <constraint firstItem="UJY-1L-u31" firstAttribute="leading" secondItem="4s5-WT-Afv" secondAttribute="leading" constant="16" id="XF4-yn-fSL"/>
                                             <constraint firstItem="0s7-Ur-UNt" firstAttribute="centerX" secondItem="4s5-WT-Afv" secondAttribute="centerX" id="aNq-y2-Rar"/>
                                             <constraint firstItem="GpJ-tY-hTi" firstAttribute="top" secondItem="UJY-1L-u31" secondAttribute="bottom" constant="32" id="bve-V6-DV6"/>
                                             <constraint firstItem="uHe-DW-zV4" firstAttribute="leading" secondItem="3TG-cX-Xtw" secondAttribute="leading" id="fD0-4L-NNm"/>
-                                            <constraint firstItem="uHe-DW-zV4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="3TG-cX-Xtw" secondAttribute="bottom" constant="32" id="pZC-QS-4KZ"/>
                                             <constraint firstItem="0s7-Ur-UNt" firstAttribute="top" secondItem="4s5-WT-Afv" secondAttribute="top" constant="32" id="wtY-PD-5uU"/>
                                             <constraint firstItem="3TG-cX-Xtw" firstAttribute="leading" secondItem="4s5-WT-Afv" secondAttribute="leading" constant="16" id="yAs-sB-YXP"/>
                                         </constraints>
@@ -644,6 +684,7 @@
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="star.circle" catalog="system" width="128" height="121"/>
         <image name="text.badge.checkmark.rtl" catalog="system" width="128" height="109"/>
+        <image name="timer" catalog="system" width="128" height="121"/>
         <image name="tray" catalog="system" width="128" height="88"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
